# Dirichlet_problem

./: CMakeLists.txt  Makefile  iter.cpp  iter.h  main_par.cpp  main_par_omp.cpp  main_seq.cpp  mat.h  mesh.cpp  mesh.h
graph/: plotter.py
